[gd_scene load_steps=2 format=3 uid="uid://bna3a48kkq3bh"]

[ext_resource type="Script" path="res://scenes/game/ui/menus/menu_components/options_menu_options.gd" id="1_2iwul"]

[node name="options_menu_options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2iwul")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpacingLabelStart" type="Label" parent="HBoxContainer"]
editor_description = "Adds a bit of padding to the edges of the volume controls
"
layout_mode = 2
text = " "

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpacingLabelStart" type="Label" parent="HBoxContainer/Labels"]
editor_description = "Adds a bit of padding to the edges of the volume controls
"
layout_mode = 2
text = " "

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Labels/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Labels/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/Labels/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="HBoxContainer/Labels/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Sounds Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/Labels/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="CheckBox" parent="HBoxContainer/Labels/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="HSlider_mus" type="HSlider" parent="HBoxContainer/Labels/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
max_value = 1.0
step = 0.1
value = 1.0

[node name="HSlider_sfx" type="HSlider" parent="HBoxContainer/Labels/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HSlider_mus")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../../BackButton")
max_value = 1.0
step = 0.1
value = 1.0

[node name="BackButton" type="Button" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HBoxContainer/VBoxContainer2/HSlider_sfx")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../HBoxContainer/VBoxContainer2/HSlider_mus")
text = "Back"

[node name="SpacingLabelEnd" type="Label" parent="HBoxContainer/Labels"]
editor_description = "Adds a bit of padding to the edges of the volume controls
"
layout_mode = 2
text = " "

[node name="SpacingLabelEnd" type="Label" parent="HBoxContainer"]
editor_description = "Adds a bit of padding to the edges of the volume controls
"
layout_mode = 2
text = " "

[connection signal="toggled" from="HBoxContainer/Labels/HBoxContainer/VBoxContainer2/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="HBoxContainer/Labels/HBoxContainer/VBoxContainer2/HSlider_mus" to="." method="_on_h_slider_mus_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Labels/HBoxContainer/VBoxContainer2/HSlider_sfx" to="." method="_on_h_slider_sfx_value_changed"]
[connection signal="pressed" from="HBoxContainer/Labels/BackButton" to="." method="_on_back_button_pressed"]
